2003-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* subr.el (custom-declare-variable-early): Reference
	dumped-lisp.el in comment.

	* custom.el (at end): Remark about `custom-declare-variable-list'.

2003-03-01  Ben Wing  <ben@xemacs.org>

	* cmdloop.el:
	* cmdloop.el (read-quoted-char-radix): New.
	* cmdloop.el (read-quoted-char):
	* cmdloop.el (momentary-string-display):
	* custom.el:
	* custom.el (custom-initialize-set):
	* custom.el (custom-initialize-reset):
	* custom.el (custom-initialize-changed):
	* custom.el (custom-declare-variable):
	* custom.el (defcustom):
	* dumped-lisp.el (preloaded-file-list):
	* files.el:
	* files.el (delete-auto-save-files): New.
	* files.el (directory-abbrev-alist):
	* files.el (make-backup-files):
	* files.el (backup-by-copying-when-privileged-mismatch): New.
	* files.el (normal-backup-enable-predicate): New.
	* files.el (buffer-offer-save):
	* files.el (small-temporary-file-directory): New.
	* files.el (null-device): New.
	* files.el (version-control):
	* files.el (auto-save-file-name-transforms): New.
	* files.el (save-abbrevs):
	* files.el (find-directory-functions): New.
	* files.el (find-file-not-found-hooks):
	* files.el (write-file-hooks):
	* files.el (write-contents-hooks):
	* files.el (write-file-data-hooks):
	* files.el (enable-local-variables):
	* files.el ((fboundp 'file-locked-p)):
	* files.el (view-read-only): New.
	* files.el (cd-absolute):
	* files.el (load-file):
	* files.el (file-local-copy):
	* files.el (file-chase-links):
	* files.el (switch-to-buffer-other-window):
	* files.el (switch-to-buffer-other-frame):
	* files.el (find-file):
	* files.el (find-file-other-window):
	* files.el (find-file-other-frame):
	* files.el (find-file-read-only):
	* files.el (find-file-read-only-other-window):
	* files.el (find-file-read-only-other-frame):
	* files.el (abbreviate-file-name):
	* files.el (find-buffer-visiting):
	* files.el (find-file-wildcards): New.
	* files.el (find-file-suppress-same-file-warnings): New.